Change header-content padding value to fix horizontal scroll

--- a/_sass/initialize.scss
+++ b/_sass/initialize.scss
@@ -447,7 +447,7 @@ table {
 }
 
 .header-content {
-  padding: 10px;
+  padding-bottom: 10px;
   padding-top: 20px;
   width: 100%;
 }
